fixup spacing & alignment

--- a/web/themes/custom/legacy/css/src/_atom.less
+++ b/web/themes/custom/legacy/css/src/_atom.less
@@ -47,6 +47,14 @@
   }
 }
 
+.-mx-1 {
+  margin-left: 1rem; margin-right: 1rem;
+  @supports (margin-inline: 1rem) {
+    margin-left: unset; margin-right: unset;
+    margin-inline: 1rem;
+  }
+}
+
 .-fw-b {
   font-weight: bold;
 }
